fix: add rounded corners to main window and prevent overflow in body

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html, body {
 body {
     -webkit-app-region:drag;
     border-radius: 15px;
+    overflow: hidden;
     font-family: "Poppins", sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
